expected/main/core/bitdata/fromBits-neg2.err
ERROR: "actual/main/core/bitdata/fromBits-neg2.lc", line 9
external g1 {primBitToBitdata 9 G1}  :: Bit 9 -> G1
         ^
No generated implementation: Bitdata type G1 contains junk

ERROR: "actual/main/core/bitdata/fromBits-neg2.lc", line 12
external g2 {primBitToBitdata 9 G2}  :: Bit 9 -> G2
         ^
No generated implementation: Bitdata type G2 contains junk

ERROR: Aborting after 2 previously reported errors

